tests/cases/typecheck/pat_binds/different_binds.hash
// run=fail, stage=typecheck


main := () => {
    k := (1, 2);

    match k {
        (mut a, b) | (a, b) => {}
    }
}
